Fix wrap issue with first comment in Firefox.

--- a/ProcessLatestComments.css
+++ b/ProcessLatestComments.css
@@ -1,4 +1,5 @@
 table.CommentItem {
+	clear: both; 
 	border-top: 1px solid #000; 
 	margin: 0 0 2em 0;
 	width: 100%; 
